syntax="proto3";

package proto;
option go_package = "./recommend-server;recommend_server_proto";

// TODO 用户产品矩阵
service RecommendService{
   // TODO 数据埋点 点击，购买，搜索，浏览（鼠标悬浮超过一定时间，前端悬浮展示介绍等内容）
  // TODO 行为后端定义( click,purchase...)
  rpc ClickProduct(ClickProductRequest) returns (ClickProductResponse);
  rpc PurchaseProduct(PurchaseProductRequest) returns (PurchaseProductResponse);
  rpc SearchProduct(SearchProductRequest) returns (SearchProductResponse);
  rpc BrowseProduct(BrowseProductRequest) returns (BrowseProductResponse);

  // TODO 获取推荐的商品
  rpc GetRecommendProductList(GetRecommendProductListRequest) returns (GetRecommendProductListResponse);
}

message GetRecommendProductListRequest{
  int64 user_id = 1;
//  int32 currentPage = 2;
//  int32 pageSize = 3;
}
message GetRecommendProductListResponse{
  int32 code=1;
  string status_code=2;
  string msg=3;

//  int32 currentPage = 4;
//  int32 pageSize = 5;
//  int32 totalItems = 6;
  repeated ProductListItem2 productList = 7;
}

message ProductListItem2{
  int32 product_id = 1;
  string product_name = 2;
  string product_cover = 3;
  double product_price = 4;
  int32 product_categoryId = 5;
  string description = 6;
}


message BrowseProductRequest{
  int64 user_id = 1;
  int32 product_id = 2;
  // 时间后端生成，不用前端传
}
message BrowseProductResponse{}

message SearchProductRequest{
  // TODO 后端做keyword模糊匹配商品，找到product_id
  int64 user_id = 1;
  string keyword = 2;
  // 时间后端生成，不用前端传
}
message SearchProductResponse{}

message PurchaseProductRequest{
  int64 user_id = 1;
  int32 product_id = 2;
  // 时间后端生成，不用前端传
  int32 quantity = 3; //购买数量,暂时没用到
}
message PurchaseProductResponse{}

message ClickProductRequest{
  int64 user_id = 1;
  int32 product_id = 2;
  // 时间后端生成，不用前端传
}
message ClickProductResponse{}


